# roadmap

./: .bandit  .batch4_replacements.py  .env.production  .find_batch4.py  .find_batch6_candidates.py  .gitignore  .importlinter  .jscpdrc.json  .pre-commit-config.yaml  .replace_simple.py  .roadmap_branch_context.json  .semgrep.yml  .vultureignore  ARCHITECTURE.md  ARCHITECTURE_DB_VS_FILES.md  ARCHITECTURE_MIGRATION_STATUS.md  ARCHITECTURE_REBUILD_PLAN.md  ARCHITECTURE_REFACTORING_SUMMARY.md  AUDIT_SUMMARY.md  CHANGELOG.md  CICD_RECOMMENDATION.md  CIRCULAR_IMPORT_DIAGRAM.md  CIRCULAR_IMPORT_INDEX.md  CIRCULAR_IMPORT_RESULTS.md  CIRCULAR_IMPORT_SOLUTION.md  CIRCULAR_IMPORT_SUMMARY.md  CIRCULAR_IMPORT_TRACES.md  CLEANUP_RECOMMENDATIONS.md  CLI_COMMANDS_COMPARISON.md  CODE_QUALITY_ANALYSIS_COMPREHENSIVE.md  CODE_QUALITY_AUDIT.md  COMPLEXITY_IMPROVEMENT_REPORT.md  COMPLEX_STATE_MACHINE_TEST_TARGETS.md  COMPREHENSIVE_TESTING_STRATEGY.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CORRECT_DRY_APPROACH.md  COVERAGE_ANALYSIS_PRIORITIES.md  DEAD_CODE_ANALYSIS.md  DOCUMENTATION_v0.7.0_COMPLETE.md  DOMAIN_MODELS_TEST_SUITE_COMPLETE.md  (+133 more)
.github/: config.json  copilot-instructions.md
.github/workflows/: roadmap-starter.yml  tests.yml
.roadmap/: .gitignore  .init_manifest.json  .sync-state.json  config.yaml  state.db  updates.json
.roadmap/backups/: invalid_issue_20251012_133302.backup.md
.roadmap/db/: state.db  state.db-shm
.roadmap/issues/: 0b4a88eb-phase-1-config-system-user--project.md  0ccb9f0f-rename-project-commands-and-templates-to-roadmap-for-clearer-terminology.md  11583b53-migrate-to-timezone-aware-datetime-architecture-for-multi-timezone-team-support.md  1900c289-auto-create-feature-branch-for-new-issues.md  1fb2b36c-enhance-init-command-with-automatic-project-setup-and-credential-flow.md  (+75 more)
config/: .coveragerc  .jscpdrc.json  .pylintrc  .semgrep.yml  .vultureignore  bandit.toml  import-linter.ini  ruff.toml
demo-project/: .gitignore  README.md
docs/: 1_0_RELEASE_CHECKLIST.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  BULK_OPERATIONS.md  CI_CD.md  CI_CD_SECURITY.md  CLI_REFERENCE.md  CLI_REFERENCE_AUTO.md  CODE_QUALITY_AUDIT_2025_12_10.md  CODE_QUALITY_RECOMMENDATIONS.md  CODE_QUALITY_TOOLING.md  COMPLETE_EXECUTION_SUMMARY.md  COMPREHENSIVE_REFACTORING_PLAN.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_COMPLETION_GUIDE.md  DOCUMENTATION_INDEX.md  DRY_IMPLEMENTATION_PLAN.md  DRY_IMPLEMENTATION_UPDATED.md  DRY_PATTERNS_GUIDE.md  DRY_QUICK_REFERENCE.md  DRY_REFACTORING_COMPLETED.md  DRY_VIOLATIONS_ANALYSIS.md  ENHANCED_ANALYTICS.md  ERROR_HANDLING_IMPLEMENTATION_PLAN.md  ERROR_HANDLING_QUICK_REFERENCE.md  ERROR_LOGGING_DISCUSSION.md  ERROR_LOGGING_STRATEGY.md  EXPANDED_REFACTORING_STRATEGY.md  FAQ.md  FEATURE_SHOWCASE.md  FUTURE_FEATURES.md  GITHUB_TOKEN_SETUP.md  GIT_HOOKS.md  GIT_HOOKS_IMPLEMENTATION_PLAN.md  HIGH_QUALITY_TESTS_COMPLETE.md  HIGH_QUALITY_TEST_SUMMARY.md  INIT_ENHANCEMENTS.md  INSTALLATION.md  INTEGRATION_TEST_GUIDE.md  INTEGRATION_TEST_ROBUSTNESS_COMPLETE.md  (+95 more)
future/: FUTURE_FEATURES.md  __init__.py  activity_tracking.py  analytics.py  analytics_commands.py  ci_commands.py  ci_tracking.py  curation.py  deprecated_commands.py  enhanced_analytics.py  enhanced_github_integration.py  identity.py  predictive.py  release_management.py  repository_scanner.py  team_management.py  timezone_migration.py  user_management.py  webhook_server.py
roadmap/: __init__.py  analytics.py  bulk_operations.py  ci_tracking.py  cli.py  cli_backup_original.py  core.py  credentials.py  curation.py  data_processing.py  data_utils.py  database.py  datetime_parser.py  enhanced_analytics.py  enhanced_github_integration.py  error_handling.py  file_locking.py  file_utils.py  git_hooks.py  git_hooks_v2.py  git_integration.py  github_client.py  identity.py  logging.py  models.py  parser.py  performance_sync.py  persistence.py  predictive.py  progress.py  repository_scanner.py  security.py  settings.py  sync.py  timezone_migration.py  timezone_utils.py  validation.py  version.py  visualization.py  webhook_server.py
scripts/: .gitignore  README.md  add_missing_assertions_bulk.py  analyze_coverage_hotspots.py  analyze_credentials.py  analyze_duplicates.py  analyze_for_pruning.py  analyze_logs.py  analyze_slow_tests.py  audit_error_handling.py  audit_missing_assertions.py  auto_add_imports.py  baseline_profiler.py  batch_fix_assertions.py  batch_replace_mocks.py  build_docs.sh  build_sphinx_docs.sh  check-radon.sh  cli_parity_check.py  collect_metrics.py  compare_baseline.py  complexity_table.py  comprehensive_baseline.py  comprehensive_code_quality_audit.py  consolidation_targets.py  demo_observability.py  detect_missing_assertions_ast.py  enforce_complexity.py  fix_adapters_imports.py  fix_datetime_imports.py  generate_api_docs.py  generate_api_docs.sh  generate_cli_docs.py  generate_violation_baseline.py  lint-imports-wrapper.sh  make_datetime_timezone_aware.py  measure_baseline.py  measure_real_baseline.py  migrate_file.py  phase5_analysis.py  (+16 more)
test_sync_backend/: .init_manifest.json  config.yaml
test_sync_init/: .init_manifest.json
tests/: TEST_ORGANIZATION.md  __init__.py  conftest.py  test_analytics.py  test_assignee_validation.py  test_bulk_operations.py  test_ci_integration.py  test_ci_tracking.py  test_cli.py  test_cli_backup_monolithic.py  test_cli_ci_integration.py  test_cli_coverage.py  test_cli_extended.py  test_cli_extended_deprecated.py  test_cli_smoke.py  test_close_orphaned_issues.py  test_comments.py  test_core.py  test_core_advanced.py  test_core_comprehensive.py  test_core_edge_cases.py  test_core_final.py  test_credentials.py  test_cross_platform_credentials.py  test_curation.py  test_data_factory.py  test_data_utils.py  test_enhanced_analytics.py  test_enhanced_github_integration.py  test_enhanced_list_command.py  test_enhanced_persistence.py  test_estimated_time.py  test_file_locking.py  test_git_hooks.py  test_git_hooks_coverage.py  test_git_hooks_integration.py  test_git_integration.py  test_git_integration_coverage.py  test_github_client.py  test_gitignore_management.py  (+25 more)
(+5417 files in other folders)
