[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# ============================================================================
# ROADMAP CLI - Enterprise Project Management Tool
# ============================================================================
# PRODUCTION INSTALLATION: uv sync
#   Installs runtime dependencies (0 known CVEs)
#
# DEVELOPMENT INSTALLATION: uv sync
#   Includes all dependencies including testing, linting, and documentation
# ============================================================================
name = "roadmap-cli"
version = "1.0.0"
description = "Enterprise-grade command line tool for project roadmap management with GitHub integration, data visualization, and advanced analytics"
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = {text = "MIT"}
authors = [{name = "Roadmap CLI Team", email = "contact@roadmap-cli.com"}]
keywords = [
    "cli",
    "roadmap",
    "planning",
    "project-management",
    "github",
    "agile",
    "scrum",
    "milestone",
    "issue-tracking",
    "analytics",
    "visualization",
    "productivity"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.0.0,<9.0.0",
    "rich>=13.5.2,<13.6.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.28.0,<3.0.0",
    "keyring>=23.0.0,<26.0.0",
    "toml>=0.10.0,<1.0.0",
    "structlog>=23.0.0,<24.0.0",
    "dynaconf>=3.2.0,<4.0.0",
    "asyncclick>=8.1.0,<9.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
    "import-linter>=2.6.0,<2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-aiohttp>=1.0.0",
    "ruff>=0.6.9",
    "pre-commit>=4.3.0",
    "vulture>=2.14",
    "bandit[toml]>=1.9.2",
    "pydocstyle>=6.3.0",
    "radon>=6.0.1",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "pyright>=1.1.350",
    "pylint>=3.0.0",
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-click>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-click>=0.8.0",
    "myst-parser>=4.0.0",
    "pytest-mock>=3.15.1",
    "semgrep>=1.45.0,<2.0.0",
]

[project.urls]
Homepage = "https://roadmap-cli.readthedocs.io"
Repository = "https://github.com/roadmap-cli/roadmap"
Documentation = "https://roadmap-cli.readthedocs.io"

[project.scripts]
roadmap = "roadmap.adapters.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["roadmap"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "roadmap/cli_backup_original.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Security configuration for Bandit
[tool.bandit]
exclude_dirs = ["tests"]
# Skip assert_used: we use asserts in tests (B101)
# Skip try_except_pass: intentional in cleanup/cleanup handlers (B110)
skips = ["B101", "B110"]

# Dead code detection configuration for Vulture
[tool.vulture]
ignore_names = ["include_traceback", "filters", "log_level", "log_file", "force"]
min_confidence = 80

# Type checking is now handled by Pyright
# Configuration is in pyrightconfig.json
# Pyright provides superior type inference and VSCode integration

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = """
    --cov=roadmap
    --cov-report=term-missing
    --cov-report=html
    --strict-markers
    --strict-config
    --disable-warnings
    -ra
"""
markers = [
    "unit: Unit tests (fast, no filesystem operations)",
    "integration: Integration tests (slower, with filesystem operations)",
    "filesystem: Tests that require real filesystem operations",
    "slow: Tests that are known to be slow",
    "parallel: Tests that can run in parallel"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Coverage configuration - exclude non-logic files
[tool.coverage.run]
# Omit configuration files and stubs from coverage
omit = [
    "*/settings.py",           # Configuration constants, not logic
    "*/version.py",            # Version metadata, not logic
    "*/adapters/cli/init.py",  # Stub module
    "*/adapters/cli/sync_context.py",  # Integration scaffolding
    "*/adapters/cli/sync_service.py",  # Thin wrapper, tested elsewhere
]

[tool.coverage.report]
# Set minimum coverage requirement for reporting
fail_under = 77
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

# Import linter - enforce architectural layer boundaries
[tool.import_linter]
root_package = "roadmap"

[[tool.import_linter.contracts]]
# Core should not import adapters
type = "forbidden"
source_module = "roadmap.core"
forbidden_modules = [
    "roadmap.adapters"
]

[[tool.import_linter.contracts]]
# Common should not import core or adapters
type = "forbidden"
source_module = "roadmap.common"
forbidden_modules = [
    "roadmap.core",
    "roadmap.adapters"
]

[[tool.import_linter.contracts]]
# Infrastructure should not import adapters (they coordinate, not integrate)
type = "forbidden"
source_module = "roadmap.infrastructure"
forbidden_modules = [
    "roadmap.adapters"
]

[[tool.import_linter.contracts]]
# Adapters can import core, common, infrastructure but not other adapters from different domains
# (GitHub adapter shouldn't import git adapter internals, etc.)
type = "forbidden"
source_module = "roadmap.adapters.sync"
forbidden_modules = [
    "roadmap.adapters.persistence",
    "roadmap.adapters.github"
]

[[tool.import_linter.contracts]]
type = "forbidden"
source_module = "roadmap.adapters.persistence"
forbidden_modules = [
    "roadmap.adapters.sync",
    "roadmap.adapters.github"
]
