# Production Installation Configuration
# Use this configuration to ensure clean, vulnerability-free installations

[metadata]
name = roadmap-cli
version = 0.4.0

[options]
# By default, pip will only install production dependencies when using this config
# For development, use: pip install -e ".[dev]"
# For production, use: pip install .

[bdist_wheel]
universal = False
